Apps/media/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-default-gateway
  namespace: media
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: monitoring
  to:
  - group: ""
    kind: Service
