Apps/media/qbittorrent.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-tailnet
  namespace: media
  annotations:
    tailscale.com/hostname: qbittorrent
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
