Apps/media/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: monitoring
  hostnames:
  - "jellyfin.home"
  rules:
  - backendRefs:
    - name: jellyfin
      port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: monitoring
  hostnames:
  - "qb.home"
  rules:
  - backendRefs:
    - name: qbittorrent
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: media
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: monitoring
  hostnames:
  - "sonarr.home"
  rules:
  - backendRefs:
    - name: sonarr
      port: 8989
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: media
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: monitoring
  hostnames:
  - "radarr.home"
  rules:
  - backendRefs:
    - name: radarr
      port: 7878
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: monitoring
  hostnames:
  - "prowlarr.home"
  rules:
  - backendRefs:
    - name: prowlarr
      port: 9696
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bazarr
  namespace: media
spec:
  parentRefs:
  - name: homelab-gateway
    namespace: monitoring
  hostnames:
  - "bazarr.home"
  rules:
  - backendRefs:
    - name: bazarr
      port: 6767
